# Koryphaios

./: .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  BUILD.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PHASE2_SUMMARY.md  PRODUCTION_AUDIT.md  README.md  SECURITY.md  config.example.json  docker-compose.yml  ecosystem.config.js  grep_output.txt  koryphaios.json  package.json  tauri.pid  test_errors_output.txt  test_output.txt  test_output_all.txt  test_output_all_v2.txt  verification_output.txt  verify_ui_v2.ts
.github/: copilot-instructions.md
backend/: Dockerfile  PHASE1_COMPLETE.md  SECURITY_IMPROVEMENTS.md  ddg_raw.html  package.json  tsconfig.json  typecheck_output.txt  typecheck_output_2.txt
config/: app.config.json  schema.json
desktop/: BUILD_QUICKREF.md  README.md  package.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: config.rs  error.rs  indexer.rs  lib.rs
docs/: 500-ERROR-FIX.md  AI_PROVIDERS_TAXONOMY.md  BEGINNER_ADVANCED_MODE_PLAN.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  ENCRYPTION_MIGRATION_GUIDE.md  ERROR-MONITORING.md  MODE_SYSTEM.md  PRODUCTION_SECURITY_PLAN.md  SECURITY_CONNECTIVITY_AUDIT_REPORT.md  SHADOW_LOGGER.md  TOOL_DEVELOPMENT.md  TROUBLESHOOTING.md  UPDATES.md  WORKSPACE_MANAGER.md  openapi.yaml
e2e/: backend-startup-gate.spec.ts  feedback.spec.ts
frontend/: README.md  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
homebrew/: koryphaios.rb
mcp-server/: tsconfig.json
monitoring/: prometheus.yml
(+473 files in other folders)
