[package]
name = "koryphaios-desktop"
version = "0.2.0"
description = "Koryphaios — AI Agent Orchestration Platform"
authors = ["Sylorlabs"]
edition = "2021"

[lib]
name = "koryphaios_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "koryphaios-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
